# argocd

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yaml
cd/manifests/: api-service.yaml  kustomization.yaml
helm/: values-production.yaml  values.yaml
helm/templates/: NOTES.txt  api-deployment.yaml  api-service.yaml
k8s/: api-deployment.yaml  kustomization.yaml
