[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Rogerio Biondi <rogerio.biondi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94.1"
uvicorn = {extras = ["standard"], version = "^0.21.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
